--- a/package.json
+++ b/package.json
@@ -5,8 +5,18 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "eslint:check": "eslint 'src/**/*.ts'",
+    "eslint:fix": "eslint 'src/**/*.ts' --fix ",
+    "htmlhint:check": "npx htmlhint \"src/**/*.html\"",
+    "htmlhint:fix": "prettier --write \"src/**/*.html\"",
+    "stylelint:check": "stylelint src/**/*.{css,scss}",
+    "stylelint:fix": "stylelint --fix src/**/*.{css,scss}",
+    "prepare": "husky",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "test:watch": "ng test --watch=true",
+    "test:coverage": "ng test --no-watch --code-coverage",
+    "test:headless": "ng test --watch=false --browsers=ChromeHeadless"
   },
   "private": true,
   "dependencies": {
@@ -18,6 +28,7 @@
     "@angular/platform-browser": "^15.0.0",
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
+    "@ngneat/until-destroy": "^10.0.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
@@ -27,12 +38,25 @@
     "@angular/cli": "~15.0.3",
     "@angular/compiler-cli": "^15.0.0",
     "@types/jasmine": "~4.3.0",
+    "@typescript-eslint/eslint-plugin": "^7.6.0",
+    "@typescript-eslint/parser": "^7.6.0",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-angular": "^4.1.0",
+    "eslint-plugin-unused-imports": "^3.1.0",
+    "htmlhint": "^1.1.4",
+    "husky": "^9.0.11",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
+    "lint-staged": "^15.2.2",
+    "prettier": "^3.2.5",
+    "stylelint": "^16.3.1",
+    "stylelint-config-standard": "^36.0.0",
+    "stylelint-config-standard-scss": "^13.1.0",
     "typescript": "~4.8.2"
   }
 }
