--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "build": "ng build",
     "eslint:check": "eslint 'src/**/*.ts'",
     "eslint:fix": "eslint 'src/**/*.ts' --fix ",
-    "htmlhint:check": "npx htmlhint \"src/**/*.html\"",
-    "htmlhint:fix": "prettier --write \"src/**/*.html\"",
+    "format": "prettier --write 'src/**/*.ts'",
+    "htmlhint:check": "npx htmlhint 'src/**/*.html'",
+    "htmlhint:fix": "prettier --write 'src/**/*.html'",
     "stylelint:check": "stylelint src/**/*.{css,scss}",
     "stylelint:fix": "stylelint --fix src/**/*.{css,scss}",
     "prepare": "husky",
@@ -43,6 +44,7 @@
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-angular": "^4.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-unused-imports": "^3.1.0",
     "htmlhint": "^1.1.4",
     "husky": "^9.0.11",
