--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "ace-builds": "^1.33.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
+    "xterm": "^5.3.0",
     "zone.js": "~0.12.0"
   },
   "devDependencies": {
