--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@ngneat/until-destroy": "^10.0.0",
     "@types/ace": "^0.0.52",
     "ace-builds": "^1.33.1",
+    "lodash": "^4.17.21",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "xterm": "^5.3.0",
@@ -44,6 +45,7 @@
     "@angular/cli": "~15.0.3",
     "@angular/compiler-cli": "^15.0.0",
     "@types/jasmine": "~4.3.0",
+    "@types/lodash": "^4.17.1",
     "@typescript-eslint/eslint-plugin": "^7.6.0",
     "@typescript-eslint/parser": "^7.6.0",
     "autoprefixer": "^10.4.19",
