--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "jszip": "^3.10.1",
     "lodash": "^4.17.21",
     "rxjs": "~7.5.0",
+    "socket.io-client": "^4.7.5",
     "tslib": "^2.3.0",
     "xterm": "^5.3.0",
     "zone.js": "~0.12.0"
