--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "file-saver": "^2.0.5",
     "jszip": "^3.10.1",
     "lodash": "^4.17.21",
+    "ng2-pdf-viewer": "^10.2.2",
+    "ngx-extended-pdf-viewer": "^18.1.14",
     "rxjs": "~7.5.0",
     "socket.io-client": "^4.7.5",
     "tslib": "^2.3.0",
