--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@ngneat/until-destroy": "^10.0.0",
     "@types/ace": "^0.0.52",
     "ace-builds": "^1.33.1",
+    "canvas-confetti": "^1.9.3",
     "file-saver": "^2.0.5",
     "jszip": "^3.10.1",
     "lodash": "^4.17.21",
@@ -49,6 +50,7 @@
     "@angular-devkit/build-angular": "^15.0.3",
     "@angular/cli": "~15.0.3",
     "@angular/compiler-cli": "^15.0.0",
+    "@types/canvas-confetti": "^1.6.4",
     "@types/file-saver": "^2.0.7",
     "@types/jasmine": "~4.3.0",
     "@types/jszip": "^3.4.1",
