--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
     "@ngneat/until-destroy": "^10.0.0",
+    "@swimlane/ngx-graph": "^8.4.0",
     "@types/ace": "^0.0.52",
     "ace-builds": "^1.33.1",
     "canvas-confetti": "^1.9.3",
